# cuda-image-processing

./: CMakeLists.txt  README.md  SUBMISSION.md  download_images.py
results/: PROJECT_SUMMARY.md  execution_log.txt  performance_summary.txt
src/: kernels.cu  kernels.cuh  main.cu
